#8: Add Truffle exports - compiles