@@ -33,7 +33,10 @@
                     <argLine>--add-exports org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED --add-exports
                         org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED --add-exports
                         org.graalvm.truffle/com.oracle.truffle.api.source=ALL-UNNAMED --add-exports
-                        org.graalvm.truffle/com.oracle.truffle.api.frame=ALL-UNNAMED
+                        org.graalvm.truffle/com.oracle.truffle.api.frame=ALL-UNNAMED --add-exports
+                        org.graalvm.truffle/com.oracle.truffle.api.instrumentation=ALL-UNNAMED --add-exports
+                        org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED --add-exports
+                        org.graalvm.truffle/com.oracle.truffle.api.staticobject=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
